@@ -16,21 +16,21 @@
  */
 package org.apache.zeppelin.resource;
 
-import org.junit.Test;
+import static org.junit.jupiter.api.Assertions.assertEquals;
 
-import static org.junit.Assert.assertEquals;
+import org.junit.jupiter.api.Test;
 
 /**
  * Unit test for ResourceSet
  */
-public class ResourceSetTest {
+class ResourceSetTest {
 
   @Test
-  public void testFilterByName() {
+  void testFilterByName() {
     ResourceSet set = new ResourceSet();
 
     set.add(new Resource(null, new ResourceId("poo1", "resource1"), "value1"));
-    set.add(new Resource(null, new ResourceId("poo1", "resource2"), new Integer(2)));
+    set.add(new Resource(null, new ResourceId("poo1", "resource2"), Integer.valueOf(2)));
     assertEquals(2, set.filterByNameRegex(".*").size());
     assertEquals(1, set.filterByNameRegex("resource1").size());
     assertEquals(1, set.filterByNameRegex("resource2").size());
@@ -39,11 +39,11 @@ public class ResourceSetTest {
   }
 
   @Test
-  public void testFilterByClassName() {
+  void testFilterByClassName() {
     ResourceSet set = new ResourceSet();
 
     set.add(new Resource(null, new ResourceId("poo1", "resource1"), "value1"));
-    set.add(new Resource(null, new ResourceId("poo1", "resource2"), new Integer(2)));
+    set.add(new Resource(null, new ResourceId("poo1", "resource2"), Integer.valueOf(2)));
 
     assertEquals(1, set.filterByClassnameRegex(".*String").size());
     assertEquals(1, set.filterByClassnameRegex(String.class.getName()).size());
